@@ -6,20 +6,26 @@
   end
 -%>
 HOSTS:
-  oel6:
+  oel8:
     roles:
       - server
       - default
       - master
       - client
-    platform: el-6-x86_64
-    box: onyxpoint/oel-6-x86_64
+    platform: el-8-x86_64
+    box: generic/oracle8
     hypervisor: <%= hypervisor %>
   oel7:
     roles:
       - client
     platform: el-7-x86_64
-    box: onyxpoint/oel-7-x86_64
+    box: generic/oracle7
+    hypervisor: <%= hypervisor %>
+  oel6:
+    roles:
+      - client
+    platform: el-6-x86_64
+    box: onyxpoint/oel-6-x86_64
     hypervisor: <%= hypervisor %>
 
 CONFIG:
